[package]
name = "gb-packing-visualizer"
version = "0.1.0"
authors = ["ISSOtm <eldredhabert0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
mp4 = "0.9"
openh264 = { version = "0.2.5", default-features = false, features = ["encoder", "asm"] }
parse-display = { version = "0.5.3", default-features = false, features = ["std"] }
regex = { version = "1", default-features = false, features = ["std", "perf"] }
